--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <h3>Hello World!</h3>
             </div>
             <!-- New HTML content goes here! -->
+            <div class="my-style">
+                <h3>Connor Witmer: loves <em>graphic design</em> and learning <em>software development.</em></h3>
+            </div>
             <div class="my-bio">
                 <h3>Stephanie</h3>
                 <h4>
